crates/jarl-core/src/lints/sprintf/snapshots/jarl_core__lints__sprintf__tests__fix_output.snap
---
source: crates/jarl-core/src/lints/sprintf/mod.rs
expression: "get_fixed_text(vec![\"sprintf('a')\", \"sprintf(\\\"a\\\")\",], \"sprintf\", None)"
---
OLD:
====
sprintf('a')
NEW:
====
'a'

OLD:
====
sprintf("a")
NEW:
====
"a"
