crates/jarl-core/src/lints/sprintf/snapshots/jarl_core__lints__sprintf__tests__no_fix_mismatch.snap
---
source: crates/jarl-core/src/lints/sprintf/mod.rs
expression: "get_fixed_text(vec![\"sprintf('%a')\", \"sprintf('%a %s', 1)\",], \"sprintf\", None)"
---
OLD:
====
sprintf('%a')
NEW:
====
sprintf('%a')

OLD:
====
sprintf('%a %s', 1)
NEW:
====
sprintf('%a %s', 1)
